--- a/modulo4/index.html
+++ b/modulo4/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title >Module 4 Solution </title>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+  
+  
 </head>
-<body>
-  <h1>Module 4 Solution Starter</h1>
+<body background="ur">
+  <h1>Module 4 Solution Finished \(*-*)/ </h1>
+  <img src="https://image.freepik.com/vector-gratis/conejo-lindo-conejito-dibujos-animados-doodle-pastel-fondo-pantalla_40564-276.jpg">
 </body>
 </html>
