--- a/modulo4/index.html
+++ b/modulo4/index.html
@@ -9,7 +9,7 @@
   
   
 </head>
-<body background="ur">
+<body>
   <h1>Module 4 Solution Finished \(*-*)/ </h1>
   <img src="https://image.freepik.com/vector-gratis/conejo-lindo-conejito-dibujos-animados-doodle-pastel-fondo-pantalla_40564-276.jpg">
 </body>
